# advanced-minecraft-anticheat-analysis

./: LICENSE  README.md  pyproject.toml
anticheat_pipeline/: __init__.py  __main__.py  cli.py  config.py  default_detection.toml  features.py  io.py  model.py  outliers.py  pipeline.py  reports.py  schemas.py  scoring.py  simulator.py
config/: detection.toml
data/: gameplay_sessions.csv
docs/: technical-design.md
reports/: anti_cheat_report.html  category_summary.csv  player_assessments.csv
tests/: __init__.py  conftest.py  test_config.py  test_features.py  test_io.py  test_model.py  test_pipeline.py  test_reports.py  test_scoring.py
